[package]
name = "mys-gas-station"
version = "0.4.0"
edition = "2021"
authors = ["The Social Proof Foundation <brandon@socialproof.foundation.com>"]
license = "Apache-2.0"
repository = "https://github.com/The-Social-Proof-Foundation/mys-core-gas-station"

[dependencies]
#mys-config = { path = "../mys-upstream/crates/mys-config" }
#mys-json-rpc-types = { path = "../mys-upstream/crates/mys-json-rpc-types" }
#mys-sdk = { path = "../mys-upstream/crates/mys-sdk" }
#mys-swarm-config = { path = "../mys-upstream/crates/mys-swarm-config" }
#mys-types = { path = "../mys-upstream/crates/mys-types" }
#shared-crypto = { path = "../mys-upstream/crates/shared-crypto" }
#telemetry-subscribers = { path = "../mys-upstream/crates/telemetry-subscribers" }
#test-cluster = { path = "../mys-upstream/crates/test-cluster" }
#typed-store = { path = "../mys-upstream/crates/typed-store" }
#typed-store-derive = { path = "../mys-upstream/crates/typed-store-derive" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", branch = "main" }
mysten-metrics = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mysten-metrics" }
mys-config = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mys-config" }
mys-json-rpc-types = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mys-json-rpc-types" }
mys-sdk = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mys-sdk" }
mys-types = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mys-types" }
shared-crypto = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "shared-crypto" }
telemetry-subscribers = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "telemetry-subscribers" }

anyhow = "1.0.75"
async-trait = "0.1.51"
axum = { version = "0.6.6", features = ["headers"] }
bcs = "0.1.6"
clap = "4.4.10"
chrono = "0.4.19"
const-str = "0.5.6"
eyre = "0.6.9"
futures-util = "0.3.30"
git-version = "0.3.9"
itertools = "0.12.0"
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.19.0"
parking_lot = "0.12.1"
prometheus = "0.13.3"
rand = "0.8.5"
redis = { version = "0.25.0", features = [
    "default",
    "async-std-comp",
    "connection-manager",
] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_with = "3.4.0"
schemars = "0.8.16"
tap = "1.0.1"
tempfile = "3.2.0"
tracing = "0.1.40"
tokio = { version = "1.36.0", features = ["full"] }
tokio-retry = "0.3.0"
serde_json = "1.0.108"

[dev-dependencies]
rand = "0.8.5"

mys-swarm-config = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "mys-swarm-config" }
test-cluster = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", branch = "main", package = "test-cluster" }


[profile.release]
panic = "abort"
